After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677764 - Compilation fails if gstreamer debugging is not enabled
Compilation fails if gstreamer debugging is not enabled
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-omx
git master
Other Linux
: Normal normal
: 0.10.2
Assigned To: Felipe Contreras (banned)
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-09 16:36 UTC by Floris Bos
Modified: 2012-08-13 16:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Floris Bos 2012-06-09 16:36:03 UTC
If gstreamer debugging is disabled, GST_DEBUG_OBJECT() becomes a no-op, and  compilation fails because variables are set but not used:

==
gstomx_dummy.c: In function 'type_instance_init':
gstomx_dummy.c:86:21: error: variable 'omx_base' set but not used [-Werror=unused-but-set-variable]
cc1: all warnings being treated as errors
make[3]: *** [libgstomx_la-gstomx_dummy.lo] Error 1
==
Comment 1 Tim-Philipp Müller 2012-08-13 16:49:39 UTC
commit 97277fc4b922d46cb6a997a96574bdc8506b764c
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Mon Aug 13 17:47:50 2012 +0100

    omx: avoid compiler warnings when the gstreamer debugging system is disabled
    
    https://bugzilla.gnome.org/show_bug.cgi?id=677764