omx: avoid compiler warnings when the gstreamer debugging system is disabled

https://bugzilla.gnome.org/show_bug.cgi?id=677764